--- a/src/main/resources/com/mahmoud/computerstore/view/inventory_view.fxml
+++ b/src/main/resources/com/mahmoud/computerstore/view/inventory_view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
@@ -10,7 +11,7 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.mahmoud.computerstore.view.Inventory">
    <children>
-      <ImageView fitHeight="400.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <ImageView fitHeight="400.0" fitWidth="603.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <image>
             <Image url="@../images/CSSbgLightBlueHorizontal.png" />
          </image>
@@ -20,47 +21,74 @@
             <Font name="Arial Rounded MT Bold" size="30.0" />
          </font>
       </Label>
-      <Button layoutX="276.0" layoutY="361.0" mnemonicParsing="false" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Home" textAlignment="CENTER" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="275.0" AnchorPane.rightAnchor="275.0" AnchorPane.topAnchor="360.0">
+      <Button contentDisplay="CENTER" layoutX="276.0" layoutY="361.0" mnemonicParsing="false" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Home" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="275.0" AnchorPane.rightAnchor="275.0" AnchorPane.topAnchor="355.0">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
          <effect>
             <DropShadow />
          </effect>
       </Button>
-      <Button layoutX="45.0" layoutY="190.0" mnemonicParsing="false" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="CPUs" textAlignment="CENTER" AnchorPane.bottomAnchor="185.0" AnchorPane.leftAnchor="35.0" AnchorPane.rightAnchor="470.0" AnchorPane.topAnchor="190.0">
+      <Button contentDisplay="CENTER" layoutX="45.0" layoutY="190.0" mnemonicParsing="false" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="CPUs" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="185.0" AnchorPane.leftAnchor="35.0" AnchorPane.rightAnchor="470.0" AnchorPane.topAnchor="185.0">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
          <effect>
             <DropShadow />
          </effect>
       </Button>
-      <Button layoutX="45.0" layoutY="230.0" mnemonicParsing="false" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="GPUs" textAlignment="CENTER" AnchorPane.bottomAnchor="145.0" AnchorPane.leftAnchor="35.0" AnchorPane.rightAnchor="470.0" AnchorPane.topAnchor="230.0">
+      <Button contentDisplay="CENTER" layoutX="45.0" layoutY="230.0" mnemonicParsing="false" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="GPUs" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="145.0" AnchorPane.leftAnchor="35.0" AnchorPane.rightAnchor="470.0" AnchorPane.topAnchor="225.0">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
          <effect>
             <DropShadow />
          </effect>
       </Button>
-      <Button layoutX="45.0" layoutY="270.0" mnemonicParsing="false" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Storages" textAlignment="CENTER" AnchorPane.bottomAnchor="105.0" AnchorPane.leftAnchor="35.0" AnchorPane.rightAnchor="470.0" AnchorPane.topAnchor="270.0">
+      <Button contentDisplay="CENTER" layoutX="45.0" layoutY="270.0" mnemonicParsing="false" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Storages" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="105.0" AnchorPane.leftAnchor="35.0" AnchorPane.rightAnchor="470.0" AnchorPane.topAnchor="265.0">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
          <effect>
             <DropShadow />
          </effect>
       </Button>
-      <Button layoutX="45.0" layoutY="310.0" mnemonicParsing="false" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Cases" textAlignment="CENTER" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="35.0" AnchorPane.rightAnchor="470.0" AnchorPane.topAnchor="310.0">
+      <Button contentDisplay="CENTER" layoutX="45.0" layoutY="310.0" mnemonicParsing="false" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Cases" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="35.0" AnchorPane.rightAnchor="470.0" AnchorPane.topAnchor="305.0">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
          <effect>
             <DropShadow />
          </effect>
       </Button>
-      <Button layoutX="473.0" layoutY="190.0" mnemonicParsing="false" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Motherboards" textAlignment="CENTER" AnchorPane.bottomAnchor="185.0" AnchorPane.leftAnchor="470.0" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="190.0">
+      <Button contentDisplay="CENTER" layoutX="450.0" layoutY="190.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="98.0" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Motherboards" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="185.0" AnchorPane.leftAnchor="470.0" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="185.0">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
          <effect>
             <DropShadow />
          </effect>
       </Button>
-      <Button layoutX="491.0" layoutY="230.0" mnemonicParsing="false" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="RAMs" textAlignment="CENTER" AnchorPane.bottomAnchor="145.0" AnchorPane.leftAnchor="470.0" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="230.0">
+      <Button contentDisplay="CENTER" layoutX="491.0" layoutY="230.0" mnemonicParsing="false" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="RAMs" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="145.0" AnchorPane.leftAnchor="470.0" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="225.0">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
          <effect>
             <DropShadow />
          </effect>
       </Button>
-      <Button layoutX="491.0" layoutY="270.0" mnemonicParsing="false" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="PSUs" textAlignment="CENTER" AnchorPane.bottomAnchor="105.0" AnchorPane.leftAnchor="470.0" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="270.0">
+      <Button contentDisplay="CENTER" layoutX="491.0" layoutY="270.0" mnemonicParsing="false" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="PSUs" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="105.0" AnchorPane.leftAnchor="470.0" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="265.0">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
          <effect>
             <DropShadow />
          </effect>
       </Button>
-      <Button layoutX="491.0" layoutY="310.0" mnemonicParsing="false" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Coolers" textAlignment="CENTER" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="470.0" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="310.0">
+      <Button contentDisplay="CENTER" layoutX="491.0" layoutY="310.0" mnemonicParsing="false" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Coolers" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="470.0" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="305.0">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
          <effect>
             <DropShadow />
          </effect>
