--- a/src/main/resources/com/mahmoud/computerstore/view/main_view.fxml
+++ b/src/main/resources/com/mahmoud/computerstore/view/main_view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
@@ -24,11 +25,17 @@
          <effect>
             <DropShadow />
          </effect>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </Button>
       <Button layoutX="437.0" layoutY="317.0" mnemonicParsing="false" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="PC Builder" textAlignment="CENTER" AnchorPane.bottomAnchor="53.0" AnchorPane.leftAnchor="437.0" AnchorPane.rightAnchor="87.0" AnchorPane.topAnchor="317.0">
          <effect>
             <DropShadow />
          </effect>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </Button>
    </children>
 </AnchorPane>
