--- a/src/main/resources/com/mahmoud/computerstore/view/inventory_view.fxml
+++ b/src/main/resources/com/mahmoud/computerstore/view/inventory_view.fxml
@@ -21,7 +21,7 @@
             <Font name="Arial Rounded MT Bold" size="30.0" />
          </font>
       </Label>
-      <Button contentDisplay="CENTER" layoutX="276.0" layoutY="361.0" mnemonicParsing="false" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Home" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="275.0" AnchorPane.rightAnchor="275.0" AnchorPane.topAnchor="355.0">
+      <Button contentDisplay="CENTER" layoutX="276.0" layoutY="361.0" mnemonicParsing="false" onAction="#openHome" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Home" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="15.0" AnchorPane.leftAnchor="275.0" AnchorPane.rightAnchor="275.0" AnchorPane.topAnchor="355.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -29,7 +29,7 @@
             <DropShadow />
          </effect>
       </Button>
-      <Button contentDisplay="CENTER" layoutX="45.0" layoutY="190.0" mnemonicParsing="false" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="CPUs" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="185.0" AnchorPane.leftAnchor="35.0" AnchorPane.rightAnchor="470.0" AnchorPane.topAnchor="185.0">
+      <Button contentDisplay="CENTER" layoutX="45.0" layoutY="190.0" mnemonicParsing="false" onAction="#openCPUs" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="CPUs" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="185.0" AnchorPane.leftAnchor="35.0" AnchorPane.rightAnchor="470.0" AnchorPane.topAnchor="185.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -37,7 +37,7 @@
             <DropShadow />
          </effect>
       </Button>
-      <Button contentDisplay="CENTER" layoutX="45.0" layoutY="230.0" mnemonicParsing="false" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="GPUs" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="145.0" AnchorPane.leftAnchor="35.0" AnchorPane.rightAnchor="470.0" AnchorPane.topAnchor="225.0">
+      <Button contentDisplay="CENTER" layoutX="45.0" layoutY="230.0" mnemonicParsing="false" onAction="#openGPUs" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="GPUs" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="145.0" AnchorPane.leftAnchor="35.0" AnchorPane.rightAnchor="470.0" AnchorPane.topAnchor="225.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -45,7 +45,7 @@
             <DropShadow />
          </effect>
       </Button>
-      <Button contentDisplay="CENTER" layoutX="45.0" layoutY="270.0" mnemonicParsing="false" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Storages" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="105.0" AnchorPane.leftAnchor="35.0" AnchorPane.rightAnchor="470.0" AnchorPane.topAnchor="265.0">
+      <Button contentDisplay="CENTER" layoutX="45.0" layoutY="270.0" mnemonicParsing="false" onAction="#openStorages" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Storages" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="105.0" AnchorPane.leftAnchor="35.0" AnchorPane.rightAnchor="470.0" AnchorPane.topAnchor="265.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -53,7 +53,7 @@
             <DropShadow />
          </effect>
       </Button>
-      <Button contentDisplay="CENTER" layoutX="45.0" layoutY="310.0" mnemonicParsing="false" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Cases" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="35.0" AnchorPane.rightAnchor="470.0" AnchorPane.topAnchor="305.0">
+      <Button contentDisplay="CENTER" layoutX="45.0" layoutY="310.0" mnemonicParsing="false" onAction="#openCases" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Cases" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="35.0" AnchorPane.rightAnchor="470.0" AnchorPane.topAnchor="305.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -61,7 +61,7 @@
             <DropShadow />
          </effect>
       </Button>
-      <Button contentDisplay="CENTER" layoutX="450.0" layoutY="190.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="98.0" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Motherboards" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="185.0" AnchorPane.leftAnchor="470.0" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="185.0">
+      <Button contentDisplay="CENTER" layoutX="450.0" layoutY="190.0" mnemonicParsing="false" onAction="#openMotherboards" prefHeight="25.0" prefWidth="98.0" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Motherboards" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="185.0" AnchorPane.leftAnchor="470.0" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="185.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -69,7 +69,7 @@
             <DropShadow />
          </effect>
       </Button>
-      <Button contentDisplay="CENTER" layoutX="491.0" layoutY="230.0" mnemonicParsing="false" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="RAMs" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="145.0" AnchorPane.leftAnchor="470.0" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="225.0">
+      <Button contentDisplay="CENTER" layoutX="491.0" layoutY="230.0" mnemonicParsing="false" onAction="#openRAMs" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="RAMs" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="145.0" AnchorPane.leftAnchor="470.0" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="225.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -77,7 +77,7 @@
             <DropShadow />
          </effect>
       </Button>
-      <Button contentDisplay="CENTER" layoutX="491.0" layoutY="270.0" mnemonicParsing="false" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="PSUs" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="105.0" AnchorPane.leftAnchor="470.0" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="265.0">
+      <Button contentDisplay="CENTER" layoutX="491.0" layoutY="270.0" mnemonicParsing="false" onAction="#openStorages" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="PSUs" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="105.0" AnchorPane.leftAnchor="470.0" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="265.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
@@ -85,7 +85,7 @@
             <DropShadow />
          </effect>
       </Button>
-      <Button contentDisplay="CENTER" layoutX="491.0" layoutY="310.0" mnemonicParsing="false" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Coolers" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="470.0" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="305.0">
+      <Button contentDisplay="CENTER" layoutX="491.0" layoutY="310.0" mnemonicParsing="false" onAction="#openCoolers" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Coolers" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="65.0" AnchorPane.leftAnchor="470.0" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="305.0">
          <cursor>
             <Cursor fx:constant="HAND" />
          </cursor>
