--- a/src/main/resources/com/mahmoud/computerstore/view/case_view.fxml
+++ b/src/main/resources/com/mahmoud/computerstore/view/case_view.fxml
@@ -25,59 +25,59 @@
                 <DropShadow />
             </effect>
         </Button>
-        <TableView fx:id="caseTable" layoutX="20.0" layoutY="20.0" prefHeight="295.0" prefWidth="560.0" style="-fx-background-radius: 8; -fx-background-color: rgba(68, 103, 119, 0.25); -fx-border-color: rgba(255, 255, 255, 0.3); -fx-border-width: 1; -fx-border-radius: 8; -fx-effect: dropshadow;">
+        <TableView fx:id="psuTable" layoutX="20.0" layoutY="20.0" prefHeight="295.0" prefWidth="560.0" style="-fx-background-radius: 8; -fx-background-color: rgba(68, 103, 119, 0.25); -fx-border-color: rgba(255, 255, 255, 0.3); -fx-border-width: 1; -fx-border-radius: 8; -fx-effect: dropshadow;">
             <columns>
-                <TableColumn fx:id="idColumn" prefWidth="35.0" text="ID" />
-                <TableColumn fx:id="brandColumn" prefWidth="80.0" text="Brand" />
-                <TableColumn fx:id="modelColumn" prefWidth="120.0" text="Model" />
-                <TableColumn fx:id="formFactorColumn" prefWidth="80.0" text="Form Factor" />
-                <TableColumn fx:id="maxGpuColumn" prefWidth="70.0" text="Max GPU" />
-                <TableColumn fx:id="driveBaysColumn" prefWidth="80.0" text="Drive Bays" />
-                <TableColumn fx:id="fanSupportColumn" prefWidth="75.0" text="Fan Support" />
-                <TableColumn fx:id="radiatorColumn" prefWidth="20.0" text="Rad" />
+                <TableColumn fx:id="idColumn" prefWidth="30.0" text="ID" />
+                <TableColumn fx:id="brandColumn" prefWidth="65.0" text="Brand" />
+                <TableColumn fx:id="modelColumn" prefWidth="110.0" text="Model" />
+                <TableColumn fx:id="wattageColumn" prefWidth="60.0" text="Wattage" />
+                <TableColumn fx:id="efficiencyColumn" prefWidth="75.0" text="Efficiency" />
+                <TableColumn fx:id="modularColumn" prefWidth="65.0" text="Modular" />
+                <TableColumn fx:id="formFactorColumn" prefWidth="70.0" text="Form" />
+                <TableColumn fx:id="connectorsColumn" prefWidth="85.0" text="Connectors" />
             </columns>
         </TableView>
-        <TextField fx:id="idField" promptText="ID" layoutX="20.0" layoutY="310.0" prefHeight="25.0" prefWidth="35.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #446777;">
+        <TextField fx:id="idField" promptText="ID" layoutX="20.0" layoutY="310.0" prefHeight="25.0" prefWidth="30.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #446777;">
             <cursor>
                 <Cursor fx:constant="TEXT" />
             </cursor>
         </TextField>
-        <TextField fx:id="brandField" promptText="Brand" layoutX="55.0" layoutY="310.0" prefHeight="25.0" prefWidth="80.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #446777;">
+        <TextField fx:id="brandField" promptText="Brand" layoutX="50.0" layoutY="310.0" prefHeight="25.0" prefWidth="65.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #446777;">
             <cursor>
                 <Cursor fx:constant="TEXT" />
             </cursor>
         </TextField>
-        <TextField fx:id="modelField" promptText="Model" layoutX="135.0" layoutY="310.0" prefWidth="120.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #446777;">
+        <TextField fx:id="modelField" promptText="Model" layoutX="115.0" layoutY="310.0" prefWidth="110.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #446777;">
             <cursor>
                 <Cursor fx:constant="TEXT" />
             </cursor>
         </TextField>
-        <TextField fx:id="formFactorField" promptText="Form Factor" layoutX="255.0" layoutY="310.0" prefWidth="80.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #446777;">
+        <TextField fx:id="wattageField" promptText="Wattage" layoutX="225.0" layoutY="310.0" prefWidth="60.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #446777;">
             <cursor>
                 <Cursor fx:constant="TEXT" />
             </cursor>
         </TextField>
-        <TextField fx:id="maxGpuField" promptText="Max GPU" layoutX="335.0" layoutY="310.0" prefWidth="70.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #446777;">
+        <TextField fx:id="efficiencyField" promptText="Efficiency" layoutX="285.0" layoutY="310.0" prefWidth="75.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #446777;">
             <cursor>
                 <Cursor fx:constant="TEXT" />
             </cursor>
         </TextField>
-        <TextField fx:id="driveBaysField" promptText="Drive Bays" layoutX="405.0" layoutY="310.0" prefWidth="80.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #446777;">
+        <TextField fx:id="modularField" promptText="Modular" layoutX="360.0" layoutY="310.0" prefWidth="65.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #446777;">
             <cursor>
                 <Cursor fx:constant="TEXT" />
             </cursor>
         </TextField>
-        <TextField fx:id="fanSupportField" promptText="Fan Support" layoutX="485.0" layoutY="310.0" prefWidth="75.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #446777;">
+        <TextField fx:id="formFactorField" promptText="Form" layoutX="425.0" layoutY="310.0" prefWidth="70.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #446777;">
             <cursor>
                 <Cursor fx:constant="TEXT" />
             </cursor>
         </TextField>
-        <TextField fx:id="radiatorField" promptText="Rad" layoutX="560.0" layoutY="310.0" prefWidth="20.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #446777;">
+        <TextField fx:id="connectorsField" promptText="Connectors" layoutX="495.0" layoutY="310.0" prefWidth="85.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #446777;">
             <cursor>
                 <Cursor fx:constant="TEXT" />
             </cursor>
         </TextField>
-        <Button fx:id="addCaseButton" contentDisplay="CENTER" layoutX="505.0" layoutY="360.0" mnemonicParsing="false" onAction="#addCase" prefHeight="30.0" prefWidth="75.0" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Add Case" textAlignment="CENTER" textFill="WHITE">
+        <Button fx:id="addPsuButton" contentDisplay="CENTER" layoutX="510.0" layoutY="360.0" mnemonicParsing="false" onAction="#addPsu" prefHeight="30.0" prefWidth="70.0" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Add PSU" textAlignment="CENTER" textFill="WHITE">
             <cursor>
                 <Cursor fx:constant="HAND" />
             </cursor>
