--- a/src/main/resources/com/mahmoud/computerstore/view/cooling_view.fxml
+++ b/src/main/resources/com/mahmoud/computerstore/view/cooling_view.fxml
@@ -25,16 +25,17 @@
                 <DropShadow />
             </effect>
         </Button>
-        <TableView fx:id="caseTable" layoutX="20.0" layoutY="20.0" prefHeight="295.0" prefWidth="560.0" style="-fx-background-radius: 8; -fx-background-color: rgba(68, 103, 119, 0.25); -fx-border-color: rgba(255, 255, 255, 0.3); -fx-border-width: 1; -fx-border-radius: 8; -fx-effect: dropshadow;">
+        <TableView fx:id="coolingTable" layoutX="20.0" layoutY="20.0" prefHeight="295.0" prefWidth="560.0" style="-fx-background-radius: 8; -fx-background-color: rgba(68, 103, 119, 0.25); -fx-border-color: rgba(255, 255, 255, 0.3); -fx-border-width: 1; -fx-border-radius: 8; -fx-effect: dropshadow;">
             <columns>
                 <TableColumn fx:id="idColumn" prefWidth="35.0" text="ID" />
                 <TableColumn fx:id="brandColumn" prefWidth="70.0" text="Brand" />
-                <TableColumn fx:id="modelColumn" prefWidth="110.0" text="Model" />
-                <TableColumn fx:id="formFactorColumn" prefWidth="75.0" text="Form" />
-                <TableColumn fx:id="maxGpuColumn" prefWidth="65.0" text="GPU Len" />
-                <TableColumn fx:id="driveBaysColumn" prefWidth="75.0" text="Drives" />
-                <TableColumn fx:id="fanSupportColumn" prefWidth="70.0" text="Fans" />
-                <TableColumn fx:id="radiatorColumn" prefWidth="60.0" text="Radiator" />
+                <TableColumn fx:id="modelColumn" prefWidth="100.0" text="Model" />
+                <TableColumn fx:id="typeColumn" prefWidth="50.0" text="Type" />
+                <TableColumn fx:id="socketColumn" prefWidth="80.0" text="Socket" />
+                <TableColumn fx:id="fanSizeColumn" prefWidth="50.0" text="Fan" />
+                <TableColumn fx:id="radiatorColumn" prefWidth="70.0" text="Radiator" />
+                <TableColumn fx:id="noiseColumn" prefWidth="50.0" text="Noise" />
+                <TableColumn fx:id="rpmColumn" prefWidth="55.0" text="RPM" />
             </columns>
         </TableView>
         <TextField fx:id="idField" promptText="ID" layoutX="20.0" layoutY="310.0" prefHeight="25.0" prefWidth="35.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #446777;">
@@ -47,37 +48,42 @@
                 <Cursor fx:constant="TEXT" />
             </cursor>
         </TextField>
-        <TextField fx:id="modelField" promptText="Model" layoutX="125.0" layoutY="310.0" prefWidth="110.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #446777;">
+        <TextField fx:id="modelField" promptText="Model" layoutX="125.0" layoutY="310.0" prefWidth="100.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #446777;">
             <cursor>
                 <Cursor fx:constant="TEXT" />
             </cursor>
         </TextField>
-        <TextField fx:id="formFactorField" promptText="Form" layoutX="235.0" layoutY="310.0" prefWidth="75.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #446777;">
+        <TextField fx:id="typeField" promptText="Type" layoutX="225.0" layoutY="310.0" prefWidth="50.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #446777;">
             <cursor>
                 <Cursor fx:constant="TEXT" />
             </cursor>
         </TextField>
-        <TextField fx:id="maxGpuField" promptText="GPU Len" layoutX="310.0" layoutY="310.0" prefWidth="65.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #446777;">
+        <TextField fx:id="socketField" promptText="Socket" layoutX="275.0" layoutY="310.0" prefWidth="80.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #446777;">
             <cursor>
                 <Cursor fx:constant="TEXT" />
             </cursor>
         </TextField>
-        <TextField fx:id="driveBaysField" promptText="Drives" layoutX="375.0" layoutY="310.0" prefWidth="75.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #446777;">
+        <TextField fx:id="fanSizeField" promptText="Fan" layoutX="355.0" layoutY="310.0" prefWidth="50.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #446777;">
             <cursor>
                 <Cursor fx:constant="TEXT" />
             </cursor>
         </TextField>
-        <TextField fx:id="fanSupportField" promptText="Fans" layoutX="450.0" layoutY="310.0" prefWidth="70.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #446777;">
+        <TextField fx:id="radiatorField" promptText="Radiator" layoutX="405.0" layoutY="310.0" prefWidth="70.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #446777;">
             <cursor>
                 <Cursor fx:constant="TEXT" />
             </cursor>
         </TextField>
-        <TextField fx:id="radiatorField" promptText="Radiator" layoutX="520.0" layoutY="310.0" prefWidth="60.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #446777;">
+        <TextField fx:id="noiseField" promptText="Noise" layoutX="475.0" layoutY="310.0" prefWidth="50.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #446777;">
             <cursor>
                 <Cursor fx:constant="TEXT" />
             </cursor>
         </TextField>
-        <Button fx:id="addCaseButton" contentDisplay="CENTER" layoutX="505.0" layoutY="360.0" mnemonicParsing="false" onAction="#addCase" prefHeight="30.0" prefWidth="75.0" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Add Case" textAlignment="CENTER" textFill="WHITE">
+        <TextField fx:id="rpmField" promptText="RPM" layoutX="525.0" layoutY="310.0" prefWidth="55.0" style="-fx-background-radius: 5; -fx-border-radius: 5; -fx-border-color: #446777;">
+            <cursor>
+                <Cursor fx:constant="TEXT" />
+            </cursor>
+        </TextField>
+        <Button fx:id="addCoolingButton" contentDisplay="CENTER" layoutX="495.0" layoutY="360.0" mnemonicParsing="false" onAction="#addCooling" prefHeight="30.0" prefWidth="85.0" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Add Cooling" textAlignment="CENTER" textFill="WHITE">
             <cursor>
                 <Cursor fx:constant="HAND" />
             </cursor>
