--- a/src/main/resources/com/mahmoud/computerstore/view/gpu_view.fxml
+++ b/src/main/resources/com/mahmoud/computerstore/view/gpu_view.fxml
@@ -83,7 +83,7 @@
                 <Cursor fx:constant="TEXT" />
             </cursor>
         </TextField>
-        <Button fx:id="addCoolingButton" contentDisplay="CENTER" layoutX="490.0" layoutY="360.0" mnemonicParsing="false" onAction="#addCooling" prefHeight="30.0" prefWidth="90.0" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Add Cooling" textAlignment="CENTER" textFill="WHITE">
+        <Button fx:id="addGpuButton" contentDisplay="CENTER" layoutX="490.0" layoutY="360.0" mnemonicParsing="false" onAction="#addGpu" prefHeight="30.0" prefWidth="90.0" style="-fx-background-radius: 20; -fx-background-color: #446777;" text="Add Cooling" textAlignment="CENTER" textFill="WHITE">
             <cursor>
                 <Cursor fx:constant="HAND" />
             </cursor>
